test/libsolidity/syntaxTests/docstring_empty_description.sol
contract C {
    /// @param id
    function vote(uint id) public;
}
// ----
// DocstringParsingError: No description given for param id
